--- a/app/src/main/res/layout/fragment_election_data_detail.xml
+++ b/app/src/main/res/layout/fragment_election_data_detail.xml
@@ -30,7 +30,7 @@
                 android:id="@+id/tv_election_title"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:textSize="22sp"
+                android:textSize="@dimen/election_title_text_size"
                 android:textColor="@color/white"
                 tools:text="Hello"/>
         </androidx.appcompat.widget.Toolbar>
@@ -39,12 +39,12 @@
             android:id="@+id/tv_date_of_election"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="16dp"
+            android:layout_marginStart="@dimen/date_of_election_title_margin_left_and_right"
+            android:layout_marginTop="@dimen/margin_top_election_date"
+            android:layout_marginEnd="@dimen/date_of_election_title_margin_left_and_right"
             android:textStyle="bold"
             tools:text="TextView"
-            android:textSize="19sp"
+            android:textSize="@dimen/text_size_election_date"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -54,11 +54,11 @@
             android:id="@+id/election_information"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="52dp"
-            android:layout_marginEnd="16dp"
+            android:layout_marginStart="@dimen/margin_top_election_data"
+            android:layout_marginTop="@dimen/election_top_from_title_election_data"
+            android:layout_marginEnd="@dimen/margin_end_election_data"
             android:text="@string/election_information"
-            android:textSize="20sp"
+            android:textSize="@dimen/text_size_title_election_data"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -68,11 +68,11 @@
             android:id="@+id/link"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="@dimen/margin_top_election_data"
             android:layout_marginTop="8dp"
-            android:layout_marginEnd="16dp"
+            android:layout_marginEnd="@dimen/margin_end_election_data"
             android:text="@string/voting_location"
-            android:textSize="18sp"
+            android:textSize="@dimen/text_size_election_data"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
@@ -82,10 +82,10 @@
             android:id="@+id/link2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
+            android:layout_marginStart="@dimen/margin_top_election_data"
+            android:layout_marginEnd="@dimen/margin_end_election_data"
             android:text="@string/ballot_information"
-            android:textSize="18sp"
+            android:textSize="@dimen/text_size_election_data"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
@@ -96,9 +96,10 @@
             android:id="@+id/button_follow_election"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginBottom="40dp"
+            android:layout_marginStart="@dimen/margin_start_election_data"
+            android:textSize="@dimen/text_size_election_data"
+            android:layout_marginEnd="@dimen/margin_end_election_data"
+            android:layout_marginBottom="@dimen/margin_bottom_election_data_button"
             android:text="@string/follow_election"
             android:theme="@style/Button.Grey"
             app:layout_constraintBottom_toBottomOf="parent"
