--- a/app/src/main/res/layout/fragment_launcher.xml
+++ b/app/src/main/res/layout/fragment_launcher.xml
@@ -14,7 +14,7 @@
             android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="60dp"
+            android:layout_margin="@dimen/margin_imageview_launcher"
             android:src="@drawable/ballot_logo"
             app:layout_constraintBottom_toTopOf="@+id/button_upcoming_elections"
             app:layout_constraintEnd_toEndOf="parent"
@@ -25,9 +25,7 @@
             android:id="@+id/button_upcoming_elections"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginStart="16dp"
+            android:layout_margin="@dimen/margin_button_launcher"
             android:text="@string/upcoming_elections"
             android:theme="@style/Button.Grey"
             app:layout_constraintBottom_toTopOf="@+id/button_find_representatives"
@@ -38,9 +36,9 @@
             android:id="@+id/button_find_representatives"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="40dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginStart="16dp"
+            android:layout_marginBottom="@dimen/margin_bottom_button_launcher"
+            android:layout_marginEnd="@dimen/margin_end_fr_button_launcher"
+            android:layout_marginStart="@dimen/margin_start_fr_button_launcher"
             android:text="@string/find_my_representatives"
             android:theme="@style/Button.Grey"
             app:layout_constraintBottom_toBottomOf="parent"
