--- a/app/src/main/res/layout/representative_card.xml
+++ b/app/src/main/res/layout/representative_card.xml
@@ -6,25 +6,22 @@
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:layout_marginStart="3dp"
-        android:layout_marginTop="4dp"
-        android:layout_marginEnd="3dp"
-        android:layout_marginBottom="4dp"
+        android:layout_height="@dimen/height_card_layout"
+        android:layout_margin="@dimen/margin_card_layout"
         app:cardBackgroundColor="@color/white"
-        app:cardCornerRadius="8dp"
-        app:cardElevation="8dp"
-        app:cardMaxElevation="10dp"
+        app:cardCornerRadius="@dimen/corner_radius_card_layout"
+        app:cardElevation="@dimen/elevation_card_layout"
+        app:cardMaxElevation="@dimen/max_elevation_card_layout"
         app:cardPreventCornerOverlap="true">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="100dp">
+            android:layout_height="match_parent">
 
             <ImageView
                 android:id="@+id/iv_representative_picture"
-                android:layout_width="80dp"
-                android:layout_height="80dp"
+                android:layout_width="@dimen/image_width_card_layout"
+                android:layout_height="@dimen/image_height_card_layout"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/iv_representative_website"
                 app:layout_constraintHorizontal_bias="0.005"
@@ -35,28 +32,27 @@
 
             <ImageView
                 android:id="@+id/iv_representative_website"
-                android:layout_width="35dp"
-                android:layout_height="35dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginBottom="4dp"
+                android:layout_width="@dimen/small_images_width_card_layout"
+                android:layout_height="@dimen/small_images_height_card_layout"                android:layout_marginEnd="@dimen/image_twitter_margin_end_card_layou"
+                android:layout_marginBottom="@dimen/image_width_card_layout_"
                 app:layout_constraintBottom_toBottomOf="@+id/tv_party_line"
                 app:layout_constraintEnd_toStartOf="@+id/iv_representative_facebook"
                 app:srcCompat="@drawable/ic_www" />
 
             <ImageView
                 android:id="@+id/iv_representative_facebook"
-                android:layout_width="35dp"
-                android:layout_height="35dp"
-                android:layout_marginEnd="8dp"
+                android:layout_width="@dimen/small_images_width_card_layout"
+                android:layout_height="@dimen/small_images_height_card_layout"
+                android:layout_marginEnd="@dimen/image_twitter_margin_end_card_layou"
                 app:layout_constraintBottom_toBottomOf="@+id/iv_representative_website"
                 app:layout_constraintEnd_toStartOf="@+id/iv_representative_twitter"
                 app:srcCompat="@drawable/ic_facebook" />
 
             <ImageView
                 android:id="@+id/iv_representative_twitter"
-                android:layout_width="35dp"
-                android:layout_height="35dp"
-                android:layout_marginEnd="8dp"
+                android:layout_width="@dimen/small_images_width_card_layout"
+                android:layout_height="@dimen/small_images_height_card_layout"
+                android:layout_marginEnd="@dimen/image_twitter_margin_end_card_layou"
                 app:layout_constraintBottom_toBottomOf="@+id/iv_representative_facebook"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:srcCompat="@drawable/ic_twitter" />
@@ -65,9 +61,9 @@
                 android:id="@+id/tv_court_type"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
+                android:layout_marginStart="@dimen/margin_start_tv_card_layout"
                 tools:text="White House "
-                android:textSize="19sp"
+                android:textSize="@dimen/text_size_tv_house_type"
                 app:layout_constraintBottom_toTopOf="@+id/tv_representative_name"
                 app:layout_constraintStart_toEndOf="@+id/iv_representative_picture"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -78,7 +74,7 @@
                 android:layout_height="wrap_content"
                 tools:text="Joe Biden"
                 android:textStyle="bold"
-                android:textSize="16sp"
+                android:textSize="@dimen/text_size_rep_name_card_layout"
                 app:layout_constraintBottom_toTopOf="@+id/tv_party_line"
                 app:layout_constraintStart_toStartOf="@+id/tv_court_type"
                 app:layout_constraintTop_toBottomOf="@+id/tv_court_type" />
