--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -16,6 +16,9 @@
         <action
             android:id="@+id/action_launcherFragment_to_findMyRepresentativeFragment"
             app:destination="@id/findMyRepresentativeFragment" />
+        <action
+            android:id="@+id/action_launcherFragment_to_find"
+            app:destination="@id/find" />
 
     </fragment>
     <fragment
@@ -42,4 +45,8 @@
             android:id="@+id/action_findMyRepresentativeFragment_to_electionDataDetail"
             app:destination="@id/electionDataDetail" />
     </fragment>
+    <fragment
+        android:id="@+id/find"
+        android:name="com.example.politicalpreparedness.fragments.findrepresentative.Find"
+        android:label="Find" />
 </navigation>
