--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -40,6 +40,7 @@
     <dimen name="text_size_rep_name_card_layout">16sp</dimen>
     <dimen name="height_current_election_card_layout">80dp</dimen>
     <dimen name="tv_title_size_current_election">18sp</dimen>
+    <dimen name="margin_bottom_tv_upcoming_election">16dp</dimen>
 
     <!-- TODO: Add necessary dimension values -->s
 
