--- a/app/src/main/res/layout/fragment_find_my_representative_motion_layout.xml
+++ b/app/src/main/res/layout/fragment_find_my_representative_motion_layout.xml
@@ -13,12 +13,11 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/rep_search_data"
         android:layout_width="match_parent"
-        android:layout_height="330dp"
+        android:layout_height="wrap_content"
         android:background="@color/offWhite"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-
         app:layout_constraintTop_toTopOf="parent">
 
 
@@ -37,7 +36,7 @@
             android:id="@+id/et_address_line2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="@dimen/et_margin_top_search_rep"
             android:ems="10"
             android:hint="@string/address2"
             android:inputType="textPersonName"
@@ -48,7 +47,7 @@
             android:id="@+id/et_city"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="@dimen/et_margin_top_search_rep"
             android:ems="10"
             android:hint="@string/city"
             android:inputType="textPersonName"
@@ -67,7 +66,7 @@
             android:id="@+id/et_zipcode"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="@dimen/et_margin_top_search_rep"
             android:ems="10"
             android:hint="@string/zip_code"
             android:inputType="textPersonName"
@@ -78,7 +77,7 @@
             android:id="@+id/button_find_my_representative"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="@dimen/et_margin_top_search_rep"
             android:text="@string/find_my_representative"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -89,7 +88,7 @@
             android:id="@+id/button_use_my_location"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
+            android:layout_marginTop="@dimen/et_margin_top_search_rep"
             android:text="@string/use_my_location"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
