--- a/app/src/main/res/layout/fragment_find_my_representative_motion_layout.xml
+++ b/app/src/main/res/layout/fragment_find_my_representative_motion_layout.xml
@@ -60,6 +60,7 @@
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="@+id/et_city"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/et_city"
             app:layout_constraintTop_toBottomOf="@+id/et_address_line2" />
 
         <EditText
