--- a/app/src/main/res/layout/fragment_election_data_detail.xml
+++ b/app/src/main/res/layout/fragment_election_data_detail.xml
@@ -100,7 +100,7 @@
             android:textSize="@dimen/text_size_election_data"
             android:layout_marginEnd="@dimen/margin_end_election_data"
             android:layout_marginBottom="@dimen/margin_bottom_election_data_button"
-            android:text="@string/follow_election"
+            tools:text="@string/follow_election"
             android:theme="@style/Button.Grey"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
