--- a/app/src/main/res/layout/fragment_find_my_representative_motion_layout.xml
+++ b/app/src/main/res/layout/fragment_find_my_representative_motion_layout.xml
@@ -44,6 +44,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/et_margin_top_search_rep"
+            android:saveEnabled="false"
             android:ems="10"
             android:hint="@string/address2"
             android:inputType="textPersonName"
@@ -55,6 +56,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/et_margin_top_search_rep"
+            android:saveEnabled="false"
             android:ems="10"
             android:hint="@string/city"
             android:inputType="textPersonName"
@@ -76,6 +78,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/et_margin_top_search_rep"
             android:ems="10"
+            android:saveEnabled="false"
             android:hint="@string/zip_code"
             android:inputType="textPersonName"
             app:layout_constraintStart_toStartOf="@+id/et_city"
